--- a/InstaView/app/src/main/res/values/strings.xml
+++ b/InstaView/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="popular_photos">Popular Instagram Pics</string>
     <string name="new_text">New Text</string>
+    <string name="dummy">dum</string>
 
 </resources>
