--- a/InstaView/app/src/main/res/values/strings.xml
+++ b/InstaView/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Insta View</string>
+    <string name="app_name">InstaView</string>
+    <string name="fragment_comments">Comments Detail</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="popular_photos">Popular Instagram Pics</string>
