--- a/GridImageSearch/app/src/main/res/values/strings.xml
+++ b/GridImageSearch/app/src/main/res/values/strings.xml
@@ -14,6 +14,9 @@
     <string name="site_filter">Site Filter</string>
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
+    <string name="filter">Filter</string>
+    <string name="lookup">Lookup</string>
+
 
 
 </resources>
