--- a/GridImageSearch/app/src/main/res/values/strings.xml
+++ b/GridImageSearch/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="cancel">Cancel</string>
     <string name="filter">Filter</string>
     <string name="lookup">Lookup</string>
+    <string name="share">Share</string>
+
 
 
 
