--- a/HandShake/app/src/main/res/values/strings.xml
+++ b/HandShake/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_name">HandShake</string>
     <string name="login_label">Connect to LinkedIn</string>
     <string name="title_activity_timeline">Active Connections</string>
+    <string name="title_activity_profile">User Profile</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="empty_text">Test</string>
